--- a/firstpage.html
+++ b/firstpage.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="header">
-				<h2>demo列表</h2>
+				<h2>demo列表<a href="http://github.com/heqianyu">（我的github主页）</a></h2>
 			<div class="fixedWidth">
 				<div id="topblank"></div>
 			</div>
