--- a/waterfall（imooc）/caseWaterfall.html
+++ b/waterfall（imooc）/caseWaterfall.html
@@ -10,7 +10,7 @@
 			.pic{padding: 10px 0 0 10px;float: left;}
 			.pic img{width: 200px;min-height:200px;padding: 10px;border: 1px solid #CCC;border-radius: 5px;box-shadow: 0 0 5px #CCC;}
 		</style>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(function(){
 				waterFall();
