--- a/图片切换（hand painting）/caseHandPaintingTab.html
+++ b/图片切换（hand painting）/caseHandPaintingTab.html
@@ -16,7 +16,7 @@
 			.turnRight{position: absolute;width: 50%;height:100%;right: 0;top: 0;background: plum;opacity: 0;}
 			.turnRight:hover{opacity: .1;}
 		</style>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(function(){ i=0;
 			$(".turnRight").click(function(){if(i>=7){
