--- a/自动切换图片（s8）/s8advertisement.html
+++ b/自动切换图片（s8）/s8advertisement.html
@@ -24,7 +24,7 @@
 			.sub{position: relative;width: 225px;height: 5px;bottom: -20px;}
 			.process{width:0;height: 5px;position:relative;bottom: 0;position: absolute;}
 		</style>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				
