--- a/图片切换（nico kids）/caseKidsTab.html
+++ b/图片切换（nico kids）/caseKidsTab.html
@@ -19,7 +19,7 @@
 			.point span:hover{opacity: 1;}
 			.point span.purple{border:5px solid purple;}
 		</style>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(function(){
 				var $pwidth=$(".kidsPic img").width();
