--- a/导航页/index.html
+++ b/导航页/index.html
@@ -5,7 +5,7 @@
 		<title>heqianyu's_demo</title>
 		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
 		<link rel="stylesheet" type="text/css" href="css/firststyle.css"/>
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				
@@ -22,17 +22,28 @@
 		<div class="main">
 			<div class="fixedWidth">
 				<ul>
-					<li><a href="http://heqianyu.github.io/demo/homePage.html">1.慕课网电商网站</a></li>
+					<li>1.慕课网电商网站</li>
 					<ul>
-						<li>慕课网商城主页面</li>
-						<li>慕课网商城二级板块</li>
-						<li>慕课网商城筛选页面</li>
-						<li>慕课网商城详情（超简）页面</li>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocMall.html">慕课网商城主页面</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocSubMenu.html">慕课网商城二级板块</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocFilter.html">慕课网商城筛选页面</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocDetail.html">慕课网商城详情（超简）页面</a></li>
 					</ul>
-					<li><a href="#">2.效果</a></li>
-					<li><a href="#">3.效果</a></li>
-					<li><a href="#">4.效果</a></li>
-					<li><a href="#">5.效果</a></li>
+					<li>2.图片轮播</li>
+					<ul>
+						<li><a href="https://heqianyu.github.io/demo/caseHandPaintingTab.html">水平滚动</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
+						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">待进度条滚动（无页码版）</a></li>
+					</ul>
+					<li>3.网站类型</li>
+					<ul>
+						<li><a href="https://heqianyu.github.io/demo/caseWaterfall.html">瀑布流</a></li>
+					</ul>
+					<li>4.移动端示例</li>
+					<ul>
+						<li><a href="https://heqianyu.github.io/demo/caseImoocSpring.html">慕课贺春</a></li>
+					</ul>
+					<li>5.效果</li>
 				</ul>
 			</div>
 		</div>
