--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>heqianyu's_demo</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
-		<link rel="stylesheet" type="text/css" href="css/firststyle.css"/>
+		<link rel="stylesheet" type="text/css" href="firstPage/css/reset.css"/>
+		<link rel="stylesheet" type="text/css" href="firstPage/css/firststyle.css"/>
 		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
