--- a/caseHandPaintingTab.html
+++ b/caseHandPaintingTab.html
@@ -39,14 +39,14 @@
 	<body>
 		<div class="girlsPic">
 			<ul class="girlsUl">
-				<li><img src="handpainting/1.jpg"/></li>
-				<li class="hide"><img src="handpainting/2.jpg"/></li>
-				<li class="hide"><img src="handpainting/3.jpg"/></li>
-				<li class="hide"><img src="handpainting/4.jpg"/></li>
-				<li class="hide"><img src="handpainting/5.jpg"/></li>
-				<li class="hide"><img src="handpainting/6.jpg"/></li>
-				<li class="hide"><img src="handpainting/7.jpg"/></li>
-				<li class="hide"><img src="handpainting/8.jpg"/></li>
+				<li><img src="handPainting/1.jpg"/></li>
+				<li class="hide"><img src="handPainting/2.jpg"/></li>
+				<li class="hide"><img src="handPainting/3.jpg"/></li>
+				<li class="hide"><img src="handPainting/4.jpg"/></li>
+				<li class="hide"><img src="handPainting/5.jpg"/></li>
+				<li class="hide"><img src="handPainting/6.jpg"/></li>
+				<li class="hide"><img src="handPainting/7.jpg"/></li>
+				<li class="hide"><img src="handPainting/8.jpg"/></li>
 			</ul>
 			<div class="turnLeft"></div>
 			<div class="turnRight"></div>
