--- a/caseKidsTab.html
+++ b/caseKidsTab.html
@@ -10,9 +10,9 @@
 			.kidsPic ul{width: 3520px;height: 660px;position: absolute;left: 0;top: 0;}
 			.kidsPic li{float: left;}
 			.kidsPic img{width: 440px;height: 660px;background-size: 100%;}
-			.kidsLeft{width: 100px;height: 100px;position: absolute;left: 0;top: 280px;background:url(img/back.png) no-repeat;background-size: 100%;opacity: .5;}
+			.kidsLeft{width: 100px;height: 100px;position: absolute;left: 0;top: 280px;background:url(nicoKids/img/back.png) no-repeat;background-size: 100%;opacity: .5;}
 			.kidsLeft:hover{opacity: 1;}
-			.kidsRight{width: 100px;height: 100px;position: absolute;right: 0;top: 280px;background:url(img/more.png) no-repeat;background-size: 100%;opacity: .5;}
+			.kidsRight{width: 100px;height: 100px;position: absolute;right: 0;top: 280px;background:url(nicoKids/img/more.png) no-repeat;background-size: 100%;opacity: .5;}
 			.kidsRight:hover{opacity: 1;}
 			.point{position:absolute;bottom:0;left:0;right:0;width: 160px;height: 20px;margin-left: auto;margin-right: auto;}
 			.point span{float: left;width:0;height:0;border: 5px solid #FFF;border-radius: 50%;margin: 5px 5px;opacity: .7;}
@@ -46,14 +46,14 @@
 	<body>
 		<div class="kidsPic">
 			<ul class="kidsUl">
-				<li><img src="img/1.jpg"/></li>
-				<li><img src="img/2.jpg"/></li>
-				<li><img src="img/3.jpg"/></li>
-				<li><img src="img/4.jpg"/></li>
-				<li><img src="img/5.jpg"/></li>
-				<li><img src="img/6.jpg"/></li>
-				<li><img src="img/7.jpg"/></li>
-				<li><img src="img/8.jpg"/></li>
+				<li><img src="nicoKids/img/1.jpg"/></li>
+				<li><img src="nicoKids/img/2.jpg"/></li>
+				<li><img src="nicoKids/img/3.jpg"/></li>
+				<li><img src="nicoKids/img/4.jpg"/></li>
+				<li><img src="nicoKids/img/5.jpg"/></li>
+				<li><img src="nicoKids/img/6.jpg"/></li>
+				<li><img src="nicoKids/img/7.jpg"/></li>
+				<li><img src="nicoKids/img/8.jpg"/></li>
 			</ul>
 			<div class="kidsLeft"></div>
 			<div class="kidsRight"></div>
