--- a/caseImoocDetail.html
+++ b/caseImoocDetail.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link type="text/css" rel="stylesheet" href="css/reset.css" />
-		<link type="text/css" rel="stylesheet" href="css/detailPageMain.css" />
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
+		<link type="text/css" rel="stylesheet" href="Mall/css/detailPageMain.css" />
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				$(".addInfo").on("click",function(){
@@ -29,7 +29,7 @@
 			<div class="logobar">
 				<div class="comWidth">
 					<div class="logo fl">
-						<img src="img/logo.jpg" alt="慕课网" id="logo"/>
+						<img src="Mall/img/logo.jpg" alt="慕课网" id="logo"/>
 					</div>
 					<div class="searchbox fl">
 						<input type="text" class="searchtext fl"/>
@@ -103,7 +103,7 @@
 				<div class="leftArea">
 					<p>同价位</p>
 					<div class="other">
-						<img src="img/bo.jpg"/>
+						<img src="Mall/img/bo.jpg"/>
 						<p><a href="#">Samsung 三星 GALAXY Tab 3 8.0 WLAN版本 T310平板电话</a></p>
 						<p>¥3588</p>
 					</div>
@@ -114,7 +114,7 @@
 		</div>
 		<div class="footer">
 			<p><a href="#">慕课简介</a><a href="#">慕课公告</a><a href="#">招纳贤士</a><a href="#">联系我们</a>客服热线：400-675-1234<br />Copyright © 2006 - 2014 慕课版权所有   京ICP备09037834号   京ICP证B1034-8373号   某市公安局XX分局备案编号：123456789123</p>
-			<img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/>
+			<img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/>
 		</div>	
 	</body>
 </html>
