--- a/caseImoocFilter.html
+++ b/caseImoocFilter.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link type="text/css" rel="stylesheet" href="css/reset.css" />
-		<link type="text/css" rel="stylesheet" href="css/shaixuan.css" />
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
+		<link type="text/css" rel="stylesheet" href="Mall/css/shaixuan.css" />
+		<script src="jquery-3.2.1.min.js"></script>
 		<script type="text/javascript">
 			$(document).ready(function(){
 				$("#addInfo").on("click",function(){
@@ -29,7 +29,7 @@
 			<div class="logobar">
 				<div class="comWidth">
 					<div class="logo fl">
-						<img src="img/logo.jpg" alt="慕课网" id="logo"/>
+						<img src="Mall/img/logo.jpg" alt="慕课网" id="logo"/>
 					</div>
 					<div class="searchbox fl">
 						<input type="text" class="searchtext fl"/>
@@ -74,22 +74,22 @@
 					<a href="#">对讲机</a>
 				</div>
 				<div class="products">
-					<a href="#" class="pic"><img src="img/products.gif"/></a>
+					<a href="#" class="pic"><img src="Mall/img/products.gif"/></a>
 					<a href="#">全网底价 Apple苹果 ipad mini1</a>
 					<p>￥2088.00</p>
 				</div>
 				<div class="products">
-					<a href="#" class="pic"><img src="img/products.gif"/></a>
+					<a href="#" class="pic"><img src="Mall/img/products.gif"/></a>
 					<a href="#">全网底价 Apple苹果 ipad mini1</a>
 					<p>￥2088.00</p>
 				</div>
 				<div class="products">
-					<a href="#" class="pic"><img src="img/products.gif"/></a>
+					<a href="#" class="pic"><img src="Mall/img/products.gif"/></a>
 					<a href="#">全网底价 Apple苹果 ipad mini1</a>
 					<p>￥2088.00</p>
 				</div>
 				<div class="products">
-					<a href="#" class="pic"><img src="img/products.gif"/></a>
+					<a href="#" class="pic"><img src="Mall/img/products.gif"/></a>
 					<a href="#">全网底价 Apple苹果 ipad mini1</a>
 					<p>￥2088.00</p>
 				</div>
@@ -168,49 +168,49 @@
 					<div class="goodsclass clearfix">
 						<div class="classwrap">
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
 							</div>
 							<div class="goods">
-								<a href="#"><img src="img/goods1.jpg"/></a>
+								<a href="#"><img src="Mall/img/goods1.jpg"/></a>
 								<p class="desc">Canon佳能IXUS 132数码相机粉色(1600像素 2.7"LCD)</p>
 								<p class="price" style="font-size: 10px;line-height: 18px;color: #D4105A;font-weight: bold;">¥699.00</p>
 								<a href="#" style="line-height: 20px;">评论:<span></span><span></span><span></span><span></span><span></span>（79条）</a>
@@ -237,7 +237,7 @@
 		</div>
 		<div class="footer">
 			<p><a href="#">慕课简介</a><a href="#">慕课公告</a><a href="#">招纳贤士</a><a href="#">联系我们</a>客服热线：400-675-1234<br />Copyright © 2006 - 2014 慕课版权所有   京ICP备09037834号   京ICP证B1034-8373号   某市公安局XX分局备案编号：123456789123</p>
-			<img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/>
+			<img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/>
 		</div>	
 	</body>
 </html>
