--- a/caseImoocMall.html
+++ b/caseImoocMall.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link type="text/css" rel="stylesheet" href="css/reset.css" />
-		<link type="text/css" rel="stylesheet" href="css/homePageMain.css" />
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-		<script src="js/Mall.js" type="text/javascript" charset="utf-8"></script>
+		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
+		<link type="text/css" rel="stylesheet" href="Mall/css/homePageMain.css" />
+		<script src="jquery-3.2.1.min.js"></script>
+		<script src="Mall/js/Mall.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div class="header">
@@ -23,7 +23,7 @@
 			<div class="logobar">
 				<div class="comWidth">
 					<div class="logo fl">
-						<img src="img/logo.jpg" alt="慕课网" id="logo"/>
+						<img src="Mall/img/logo.jpg" alt="慕课网" id="logo"/>
 					</div>
 					<div class="searchbox fl">
 						<input type="text" class="searchtext fl"/>
@@ -186,13 +186,13 @@
 		<div class="banner comWidth clearfix">
 			<div class="bannerBox fr">
 				<ul class="bannerImg ">
-					<li><a href="#"><img src="img/banner2.jpg" alt="酷图B"/></a></li>
-					<li><a href="#"><img src="img/banner1.jpg" alt="酷图A"/></a></li>
-					<li><a href="#"><img src="img/banner2.jpg" alt="酷图B"/></a></li>
-					<li><a href="#"><img src="img/banner1.jpg" alt="酷图A"/></a></li>
-					<li><a href="#"><img src="img/banner2.jpg" alt="酷图B"/></a></li>
-					<li><a href="#"><img src="img/banner1.jpg" alt="酷图A"/></a></li>
-					<li><a href="#"><img src="img/banner2.jpg" alt="酷图B"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner2.jpg" alt="酷图B"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner1.jpg" alt="酷图A"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner2.jpg" alt="酷图B"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner1.jpg" alt="酷图A"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner2.jpg" alt="酷图B"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner1.jpg" alt="酷图A"/></a></li>
+					<li><a href="#"><img src="Mall/img/banner2.jpg" alt="酷图B"/></a></li>
 				</ul>
 				<div class="bannerBtn">
 					<a href="#"></a><a href="#" class="active"></a>
@@ -208,9 +208,9 @@
 				<div class="content">
 					<div class="leftArea">
 						<ul class="pic">
-							<li><img src="img/contLefPic1.jpg" alt="contLefPic1"/></li>
-							<li><img src="img/contLefPic2.jpg" alt="contLefPic2"/></li>
-							<li><img src="img/contLefPic3.jpg" alt="contLefPic3"/></li>
+							<li><img src="Mall/img/contLefPic1.jpg" alt="contLefPic1"/></li>
+							<li><img src="Mall/img/contLefPic2.jpg" alt="contLefPic2"/></li>
+							<li><img src="Mall/img/contLefPic3.jpg" alt="contLefPic3"/></li>
 						</ul>
 						<div class="go_left"></div>
 						<div class="go_right"></div>
@@ -219,50 +219,50 @@
 					<div class="rightArea">
 							<div class="top">
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 							</div>
 							<div class="bottom">
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p>¥149</p>
@@ -282,9 +282,9 @@
 				<div class="content">
 					<div class="leftArea">
 						<ul class="pic">
-							<li><a href="#"><img src="img/contLefPic1.jpg" alt="contLefPic1"/></a></li>
-							<li><a href="#"><img src="img/contLefPic2.jpg" alt="contLefPic2"/></a></li>
-							<li><a href="#"><img src="img/contLefPic3.jpg" alt="contLefPic3"/></a></li>
+							<li><a href="#"><img src="Mall/img/contLefPic1.jpg" alt="contLefPic1"/></a></li>
+							<li><a href="#"><img src="Mall/img/contLefPic2.jpg" alt="contLefPic2"/></a></li>
+							<li><a href="#"><img src="Mall/img/contLefPic3.jpg" alt="contLefPic3"/></a></li>
 						</ul>
 						<div class="btn">
 							<a href="#"></a><a href="#" class="active"></a>
@@ -293,50 +293,50 @@
 					<div class="rightArea">
 							<div class="top">
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 									<div class="item">
-										<a href="#"><img src="img/rightitem.jpg" alt="手机一"/></a>
+										<a href="#"><img src="Mall/img/rightitem.jpg" alt="手机一"/></a>
 										<h3>HTC8渴望系列</h3>
 										<p>1899元</p>
 									</div>
 							</div>
 							<div class="bottom">
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p><span>¥</span>149</p>
 									</div>
 								</div>
 								<div class="item">
-									<a href="#" class="img"><img src="img/bottompic1.jpg" alt="下部1"/></a>
+									<a href="#" class="img"><img src="Mall/img/bottompic1.jpg" alt="下部1"/></a>
 									<div class="text">
 										<a href="#">NFC技术一碰轻松配对！接触屏幕</a>
 									<p>¥149</p>
@@ -349,7 +349,7 @@
 		</div>
 		<div class="footer">
 			<p><a href="#">慕课简介</a><a href="#">慕课公告</a><a href="#">招纳贤士</a><a href="#">联系我们</a>客服热线：400-675-1234<br />Copyright © 2006 - 2014 慕课版权所有   京ICP备09037834号   京ICP证B1034-8373号   某市公安局XX分局备案编号：123456789123</p>
-			<img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/><img src="img/footerimg2.gif" alt="底部图片二"/>
+			<img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/><img src="Mall/img/footerimg2.gif" alt="底部图片二"/>
 		</div>	
 	</body>
 </html>
