--- a/caseImoocSpring.html
+++ b/caseImoocSpring.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="css/reset.css"/>
+		<link rel="stylesheet" type="text/css" href="spring/css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="firstPage/css/reset.css"/>
 	</head>
 	<body>
 		<div class="music">
-			<img id="rotate" class="play" src="img/music_disc.png"/>
-			<img src="img/music_pointer.png"/>
+			<img id="rotate" class="play" src="spring/img/music_disc.png"/>
+			<img src="spring/img/music_pointer.png"/>
 		</div>
 		<div class="page " id="page1">
 			<div class="bg"></div>
@@ -31,8 +31,8 @@
 			<div class="p3_hu"></div>
 		</div>
 		<audio autoplay="none">
-			<source src="audio/Christmas - 徐梦圆.mp3" type="audio/mp3"></source>
+			<source src="spring/audio/Christmas - 徐梦圆.mp3" type="audio/mp3"></source>
 		</audio>
-		<script type="text/javascript" src="javascript/moocspring.js"></script>
+		<script type="text/javascript" src="spring/javascript/moocspring.js"></script>
 	</body>
 </html>
