--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 					<h1 class="title" data-id = "e">效果</h1>
 					<ul class="menu none" id="e"></ul>
 				</div>	
+				<div>
+					<h1 class="title" data-id = "f">小部件</h1>
+					<ul class="menu	none" id="f">
+						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
+					</ul>
+				</div>
 			</div>	
 		</div>
 		<div class="footer">
