--- a/s8advertisement.html
+++ b/s8advertisement.html
@@ -57,7 +57,7 @@
 					<li><img src="s8ad/1.jpg"/></li>
 					<li><img src="s8ad/2.jpg"/></li>
 					<li><img src="s8ad/3.jpg"/></li>
-					<li><img src="s8ad/4.jpg"/></li>
+					<li><img src="s8ad/4.JPG"/></li>
 				</ul>
 			</div>
 			<div class="pros">
