--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			/*顶层*/
 			html{width: 100%;}
 			body{width: 100%;height: 100%;background:#fff;font-size: 12px;font-family: "微软雅黑","microsoft yahei";}
-			.fixedWidth{width:1000px;margin: 0 auto;}
+			.fixedWidth{width:50%;margin: 0 auto;}
 			/*header*/
 			.header h2{width:100%;height: 50px;line-height: 50px;position: fixed;top: 0;left: 0;text-indent:2em;background: #9ccdd9;}
 			.header a{font-size: 14px;color: #FFF;}
