--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 			/*顶层*/
 			html{width: 100%;}
 			body{width: 100%;height: 100%;background:#fff;font-size: 12px;font-family: "微软雅黑","microsoft yahei";}
-			.fixedWidth{width:50%;margin: 0 auto;}
+			.fixedWidth{width:50%;min-width:200px;margin: 0 auto;}
 			/*header*/
 			.header h2{width:100%;height: 50px;line-height: 50px;position: fixed;top: 0;left: 0;text-indent:2em;background: #9ccdd9;}
 			.header a{font-size: 14px;color: #FFF;}
 			#topblank{width: 100%;height: 50px;}
 			/*main*/
 			.main{background:#fff;}
-			.main .title{text-align: center;width:1000px;height: 60px;line-height: 60px;font-size: 18px;border-bottom: 1px solid #9CCDD9;display: inline-block;}
+			.main .title{text-align: center;width:100%;height: 60px;line-height: 60px;font-size: 18px;border-bottom: 1px solid #9CCDD9;display: inline-block;}
 			.main .title:hover{opacity: .8;background: #9ccdd9;cursor: pointer;font-size: 22px;text-indent: 30px;border-radius: 5px;}
 			.main .none{display: none;}
-			.main a{text-align: center;width:1000px;height: 60px;line-height: 60px;font-size: 16px;border-bottom: 1px solid #9CCDD9;font-size: 20px;display: inline-block;}
+			.main a{text-align: center;width:100%;height: 60px;line-height: 60px;font-size: 16px;border-bottom: 1px solid #9CCDD9;font-size: 20px;display: inline-block;}
 			.main a:hover{opacity: .8;background: #9ccdd9;}
 			/*footer*/
 			.footer{width:100%;height: 30px;position: absolute;bottom: 0;left: 0;background: #9ccdd9;}
