--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			.main a{text-align: center;width:100%;height: 60px;line-height: 60px;font-size: 16px;border-bottom: 1px solid #9CCDD9;font-size: 20px;display: inline-block;}
 			.main a:hover{opacity: .8;background: #9ccdd9;}
 			/*footer*/
-			.footer{width:100%;height: 30px;position: absolute;bottom: 0;left: 0;background: #9ccdd9;}
+			.footer{width:100%;height: 30px;position: fixed;bottom: 0;left: 0;background: #9ccdd9;}
 			.footer p{height: 30px;line-height: 30px;text-align: center;}
 
 		</style>
