--- a/s8advertisement.html
+++ b/s8advertisement.html
@@ -55,9 +55,9 @@
 			<div class="wrap">
 				<ul class="ul">
 					<li><img src="s8ad/1.jpg"/></li>
-					<li><img src="s8ad/2.jpg"/></li>
-					<li><img src="s8ad/3.jpg"/></li>
-					<li><img src="s8ad/4.jpg"/></li>
+					<li><img src="s8ad/2.JPG"/></li>
+					<li><img src="s8ad/3.JPG"/></li>
+					<li><img src="s8ad/4.JPG"/></li>
 				</ul>
 			</div>
 			<div class="pros">
