--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 					<ul class="menu none" id="a">
 						<li><a href="https://heqianyu.github.io/demo/caseHandPaintingTab.html">水平滚动</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseKidsTab.html">带页码滚动</a></li>
-						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">待进度条滚动（无页码版）</a></li>
+						<li><a href="https://heqianyu.github.io/demo/s8advertisement.html">带进度条滚动（无页码版）</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">带悬停效果</a></li>
 					</ul>
 				</div>
 				<div>
