--- a/caseImoocSubMenu.html
+++ b/caseImoocSubMenu.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>慕课网二级页面</title>
 		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
 		<link type="text/css" rel="stylesheet" href="Mall/css/shopClassMain.css" />
 	</head>
