--- a/caseTabOfJquery.html
+++ b/caseTabOfJquery.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>tab组件</title>
+		<title>食在成都</title>
 		<style type="text/css">
 			html,body,div,ul,li,a,p,span{margin: 0;padding: 0;}
 			body{font-family: "微软雅黑" "microsoft yahei";}
