--- a/caseValidate.html
+++ b/caseValidate.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>简单的表单组件</title>
 		<style type="text/css">
 			.wrap{border: 1px solid cornflowerblue;width:300px;padding-bottom: 20px;margin: 0 auto;}
 			h2{text-align: center;}
