--- a/caseHandPaintingTab.html
+++ b/caseHandPaintingTab.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>girlsPic</title>
+		<title>手绘女孩</title>
 		<style type="text/css">
 			*{padding: 0;margin: 0;}
 			li{list-style: none;}
