--- a/caseImoocDetail.html
+++ b/caseImoocDetail.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>商品详情页面</title>
 		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
 		<link type="text/css" rel="stylesheet" href="Mall/css/detailPageMain.css" />
 		<script src="jquery-3.2.1.min.js"></script>
