--- a/caseImoocMall.html
+++ b/caseImoocMall.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>慕课网商城</title>
 		<link type="text/css" rel="stylesheet" href="Mall/css/reset.css" />
 		<link type="text/css" rel="stylesheet" href="Mall/css/homePageMain.css" />
 		<script src="jquery-3.2.1.min.js"></script>
