--- a/caseImoocSpring.html
+++ b/caseImoocSpring.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>新年快乐</title>
 		<link rel="stylesheet" type="text/css" href="spring/css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="firstPage/css/reset.css"/>
 	</head>
