--- a/caseWaterfall.html
+++ b/caseWaterfall.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>过时的瀑布流演示</title>
 		<style type="text/css">
 			*{margin: 0;padding: 0;}
 			html{min-width: 250px;}
