--- a/s8advertisement.html
+++ b/s8advertisement.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>galaxyBoom8</title>
 		<style>
 			*{padding: 0;margin: 0;font-size: 14px;line-height: 14px;}
 			.go{width:900px;margin:0 auto;}
