--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 					<h1 class="title" data-id = "f">小部件</h1>
 					<ul class="menu	none" id="f">
 						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock.html">时钟实例</a></li>
 					</ul>
 				</div>
 				<div style="height: 30px;cursor: pointer;"></div>
