--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 					<ul class="menu	none" id="f">
 						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseClock.html">时钟实例</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">广告部件</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseMoreVideo.html">视频预览部件</a></li>
 					</ul>
 				</div>
 				<div style="height: 30px;cursor: pointer;"></div>
