--- a/index.html
+++ b/index.html
@@ -77,14 +77,17 @@
 					</ul>
 				</div>	
 				<div>
-					<h1 class="title" data-id = "e">效果</h1>
-					<ul class="menu none" id="e"></ul>
+					<h1 class="title" data-id = "e">canvas画板</h1>
+					<ul class="menu none" id="e">
+						<li><a href="https://heqianyu.github.io/demo/caseClock.html">拟物时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseClock2.html">点阵时钟</a></li>
+						<li><a href="https://heqianyu.github.io/demo/caseTimeOut.html">点阵倒计时</a></li>
+					</ul>
 				</div>	
 				<div>
 					<h1 class="title" data-id = "f">小部件</h1>
 					<ul class="menu	none" id="f">
 						<li><a href="https://heqianyu.github.io/demo/caseValidate.html">简单正则验证示例</a></li>
-						<li><a href="https://heqianyu.github.io/demo/caseClock.html">时钟实例</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseTabOfJquery.html">广告部件</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseMoreVideo.html">视频预览部件</a></li>
 					</ul>
