--- a/caseClock.html
+++ b/caseClock.html
@@ -1,17 +1,185 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title>时钟小插件</title>
+		<meta charset="UTF-8">
+		<title></title>
 		<style type="text/css">
-			div{text-align: center;margin-top: 250px;}
-			#clock{border:1px solid white;}
-		</style>
+/*			canvas{border: 1px solid red;}
+*/		</style>
 	</head>
 	<body>
-		<div>
-			<canvas id="clock" width="200px" height="200px"></canvas>
-		</div>
-		<script type="text/javascript" src="javascript/clock.js"></script>
+		<div><canvas id="render" width="1024" height="768"></canvas></div>
+		<script type="text/javascript">
+			var digit=[
+					[
+						[0,0,1,1,1,0,0],
+			            [0,1,1,0,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,0,1,1,0],
+			            [0,0,1,1,1,0,0]
+			        ],//0
+			        [
+			            [0,0,0,1,1,0,0],
+			            [0,1,1,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [1,1,1,1,1,1,1]
+			        ],//1
+			        [
+			            [0,1,1,1,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,1,1,0,0,0],
+			            [0,1,1,0,0,0,0],
+			            [1,1,0,0,0,0,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,1,1,1,1,1]
+			        ],//2
+			        [
+			            [1,1,1,1,1,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,1,1,1,0,0],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,1,1,0]
+			        ],//3
+			        [
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,1,0],
+			            [0,0,1,1,1,1,0],
+			            [0,1,1,0,1,1,0],
+			            [1,1,0,0,1,1,0],
+			            [1,1,1,1,1,1,1],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,1,1]
+			        ],//4
+			        [
+			            [1,1,1,1,1,1,1],
+			            [1,1,0,0,0,0,0],
+			            [1,1,0,0,0,0,0],
+			            [1,1,1,1,1,1,0],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,1,1,0]
+			        ],//5
+			        [
+			            [0,0,0,0,1,1,0],
+			            [0,0,1,1,0,0,0],
+			            [0,1,1,0,0,0,0],
+			            [1,1,0,0,0,0,0],
+			            [1,1,0,1,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,1,1,0]
+			        ],//6
+			        [
+			            [1,1,1,1,1,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,0,1,1,0,0],
+			            [0,0,1,1,0,0,0],
+			            [0,0,1,1,0,0,0],
+			            [0,0,1,1,0,0,0],
+			            [0,0,1,1,0,0,0]
+			        ],//7
+			        [
+			            [0,1,1,1,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,1,1,0]
+			        ],//8
+			        [
+			            [0,1,1,1,1,1,0],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [1,1,0,0,0,1,1],
+			            [0,1,1,1,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,0,1,1],
+			            [0,0,0,0,1,1,0],
+			            [0,0,0,1,1,0,0],
+			            [0,1,1,0,0,0,0]
+			        ],//9
+			        [
+			            [0,0,0,0],
+			            [0,0,0,0],
+			            [0,1,1,0],
+			            [0,1,1,0],
+			            [0,0,0,0],
+			            [0,0,0,0],
+			            [0,1,1,0],
+			            [0,1,1,0],
+			            [0,0,0,0],
+			            [0,0,0,0]
+			        ]//:			
+        	];
+			var dom=document.getElementById('render');
+			var ctx=dom.getContext('2d');
+			var width=dom.width;
+			var height=dom.height;
+			var radius=4;
+			function setTimes(){
+				ctx.clearRect(0,0,width,height);
+				var hours=new Date().getHours();
+				var minutes=new Date().getMinutes();
+				var seconds=new Date().getSeconds();
+				drawNumbers(0,0,parseInt(hours/10),ctx);
+				drawNumbers(15*(radius+1),0,parseInt(hours%10),ctx);
+				drawNumbers(30*(radius+1),0,10,ctx);
+				drawNumbers(45*(radius+1),0,parseInt(minutes/10),ctx);
+				drawNumbers(60*(radius+1),0,parseInt(minutes%10),ctx);
+				drawNumbers(75*(radius+1),0,10,ctx);
+				drawNumbers(90*(radius+1),0,parseInt(seconds/10),ctx);
+				drawNumbers(105*(radius+1),0,parseInt(seconds%10),ctx);
+				ctx.restore();
+			};
+			setTimes();
+			setInterval(setTimes,1000);
+			function drawNumbers(x,y,num,ctx){
+				for(var i=0;i<digit[num].length;i++){
+					for(var j=0;j<digit[num][i].length;j++){
+						if(digit[num][i][j]===1){
+							ctx.beginPath();
+							ctx.arc(x+j*(radius+1)*2+(radius+1),i*(radius+1)*2+(radius+1),radius,2*Math.PI,false);
+							ctx.fillStyle='red';
+							ctx.fill();
+							ctx.closePath();
+						}else{moveTo(0,0)}
+					}
+				}
+			};
+		</script>
 	</body>
 </html>
+
