--- a/caseClock2.html
+++ b/caseClock2.html
@@ -12,7 +12,6 @@
 		<div>
 			<canvas id="clock" width="200px" height="200px"></canvas>
 		</div>
-		<p id="timing">en</p>
-		<script type="text/javascript" src="clock.js"></script>
+		<script type="text/javascript" src="javascript/clock.js"></script>
 	</body>
 </html>
