--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<div>
 					<h1 class="title" data-id = "a">仿站</h1>
 					<ul class="menu none" id="a">
-						<li><a href="https://heqianyu.github.io/demo/iqiyi.html">爱奇艺主页</a></li>
+						<li><a href="https://heqianyu.github.io/demo/iqiyi.html">爱奇艺主页（速度，切换模式，是否自动，初始页面均可调节）</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseImoocMall.html">慕课网商城主页面</a></li>
 						<li><a href="https://heqianyu.github.io/demo/caseImoocSubMenu.html">慕课网商城二级板块</a></li>
 					</ul>
@@ -95,6 +95,7 @@
 						<li><a>15-17就业单位：如意情集团</a></li>
 						<li><a>爱好：运动、摄影</a></li>
 						<li><a>薪资期望：能让我留在深圳就好</a></li>
+						<li><a>确实基础差，不过我坚信我能用技术以及创造力弥补</a></li>
 						<li><a>请给我一个面试的机会，不胜感激！</a></li>
 					</ul>
 				</div>
